--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,7 +61,7 @@ a, a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px 10px;
+    padding: 0 10px;
 }
 
 .dsmovie-card {
@@ -169,4 +169,51 @@ a, a:hover {
     font-size: 13px;
     font-weight: 700;
     margin-bottom: 20px;
+}
+
+.dsmovie-pagination-container {
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box {
+    display: flex;
+    width: 180px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p {
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.dsmovie-pagination-box button {
+    width: 40px;
+    height: 40 px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: var(--white);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box button:disabled {
+    border: 1px solid var(--text-light-gray);
+}
+
+.dsmovie-flip-horizontal {
+    transform: rotate(180deg);
+}
+
+.dsmovie-pagination-box button img {
+    filter: brightness(0%) saturate(100%) invert(36%) sepia(52%) saturate(1561%) hue-rotate(220deg) brightness(75%) contrast(103%);
+}
+
+.dsmovie-pagination-box button:disabled img {
+    filter: unset;
 }
