--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,17 +14,23 @@
     font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
-html, body {
+html,
+body {
     background-color: var(--bg-gray);
 }
 
 header {
     background-color: var(--color-primary);
-    color:  var(--white);
+    color: var(--white);
     height: 60px;
     display: flex;
     align-items: center;
@@ -46,7 +52,8 @@ nav a {
     font-weight: 400;
 }
 
-a, a:hover {
+a,
+a:hover {
     text-decoration: none;
     color: unset;
 }
@@ -116,7 +123,8 @@ a, a:hover {
     margin-bottom: 10px;
 }
 
-.dsmovie-btn, .dsmovie-btn:hover {
+.dsmovie-btn,
+.dsmovie-btn:hover {
     height: 40px;
     width: 180px;
     background-color: var(--color-primary);
